# serializer version: 1
# name: TestInlineModeSnapshots.test_long_text[asyncio]
  list([
    dict({
      'content': list([
        dict({
          'content': dict({
            'text': 'This is a long message that gets streamed in multi',
            'type': 'text',
          }),
          'type': 'content',
        }),
      ]),
      'kind': 'other',
      'session_update': 'tool_call',
      'status': 'pending',
      'title': '[`writer`] Output',
      'tool_call_id': 'writer:output:<UUID>',
    }),
    dict({
      'content': list([
        dict({
          'content': dict({
            'text': 'This is a long message that gets streamed in multiple chunks. Each chunk should be a separate delta ',
            'type': 'text',
          }),
          'type': 'content',
        }),
      ]),
      'session_update': 'tool_call_update',
      'status': 'in_progress',
      'tool_call_id': 'writer:output:<UUID>',
    }),
    dict({
      'content': list([
        dict({
          'content': dict({
            'text': 'This is a long message that gets streamed in multiple chunks. Each chunk should be a separate delta event. The header should only be emitted once. Sub',
            'type': 'text',
          }),
          'type': 'content',
        }),
      ]),
      'session_update': 'tool_call_update',
      'status': 'in_progress',
      'tool_call_id': 'writer:output:<UUID>',
    }),
    dict({
      'content': list([
        dict({
          'content': dict({
            'text': 'This is a long message that gets streamed in multiple chunks. Each chunk should be a separate delta event. The header should only be emitted once. Subsequent deltas should have no prefix repetition.',
            'type': 'text',
          }),
          'type': 'content',
        }),
      ]),
      'session_update': 'tool_call_update',
      'status': 'in_progress',
      'tool_call_id': 'writer:output:<UUID>',
    }),
    dict({
      'session_update': 'tool_call_update',
      'status': 'completed',
      'tool_call_id': 'writer:output:<UUID>',
    }),
  ])
# ---
# name: TestInlineModeSnapshots.test_mixed_events[asyncio]
  list([
    dict({
      'kind': 'think',
      'session_update': 'tool_call',
      'status': 'pending',
      'title': '[`analyzer`] Thinking',
      'tool_call_id': 'analyzer:think:<UUID>',
    }),
    dict({
      'content': list([
        dict({
          'content': dict({
            'text': 'Need to analyze',
            'type': 'text',
          }),
          'type': 'content',
        }),
      ]),
      'session_update': 'tool_call_update',
      'status': 'in_progress',
      'tool_call_id': 'analyzer:think:<UUID>',
    }),
    dict({
      'content': list([
        dict({
          'content': dict({
            'text': 'Let me check',
            'type': 'text',
          }),
          'type': 'content',
        }),
      ]),
      'kind': 'other',
      'session_update': 'tool_call',
      'status': 'pending',
      'title': '[`analyzer`] Output',
      'tool_call_id': 'analyzer:output:<UUID>',
    }),
    dict({
      'kind': 'think',
      'raw_input': dict({
        'pattern': 'error',
      }),
      'session_update': 'tool_call',
      'status': 'pending',
      'title': '[`analyzer`]: Searching: error',
      'tool_call_id': 'analyzer:grep:call_002',
    }),
    dict({
      'content': list([
        dict({
          'content': dict({
            'text': 'No errors found',
            'type': 'text',
          }),
          'type': 'content',
        }),
      ]),
      'raw_output': 'No errors found',
      'session_update': 'tool_call_update',
      'status': 'completed',
      'tool_call_id': 'analyzer:grep:pyd_ai_<UUID>',
    }),
    dict({
      'content': list([
        dict({
          'content': dict({
            'text': 'Let me check - all good!',
            'type': 'text',
          }),
          'type': 'content',
        }),
      ]),
      'session_update': 'tool_call_update',
      'status': 'in_progress',
      'tool_call_id': 'analyzer:output:<UUID>',
    }),
    dict({
      'session_update': 'tool_call_update',
      'status': 'completed',
      'tool_call_id': 'analyzer:output:<UUID>',
    }),
    dict({
      'session_update': 'tool_call_update',
      'status': 'completed',
      'tool_call_id': 'analyzer:think:<UUID>',
    }),
  ])
# ---
# name: TestInlineModeSnapshots.test_nested_subagents[asyncio]
  list([
    dict({
      'content': list([
        dict({
          'content': dict({
            'text': 'Delegating to researcher',
            'type': 'text',
          }),
          'type': 'content',
        }),
      ]),
      'kind': 'other',
      'session_update': 'tool_call',
      'status': 'pending',
      'title': '[`coordinator`] Output',
      'tool_call_id': 'coordinator:output:<UUID>',
    }),
    dict({
      'session_update': 'tool_call_update',
      'status': 'completed',
      'tool_call_id': 'coordinator:output:<UUID>',
    }),
    dict({
      'kind': 'think',
      'session_update': 'tool_call',
      'status': 'pending',
      'title': '[`researcher`] Thinking',
      'tool_call_id': 'researcher:think:<UUID>',
    }),
    dict({
      'content': list([
        dict({
          'content': dict({
            'text': 'Searching',
            'type': 'text',
          }),
          'type': 'content',
        }),
      ]),
      'session_update': 'tool_call_update',
      'status': 'in_progress',
      'tool_call_id': 'researcher:think:<UUID>',
    }),
    dict({
      'kind': 'search',
      'raw_input': dict({
        'query': 'test',
      }),
      'session_update': 'tool_call',
      'status': 'pending',
      'title': '[`researcher`]: Searching: test',
      'tool_call_id': 'researcher:search:call_nested_001',
    }),
    dict({
      'content': list([
        dict({
          'content': dict({
            'text': 'Results found',
            'type': 'text',
          }),
          'type': 'content',
        }),
      ]),
      'raw_output': 'Results found',
      'session_update': 'tool_call_update',
      'status': 'completed',
      'tool_call_id': 'researcher:search:pyd_ai_<UUID>',
    }),
    dict({
      'session_update': 'tool_call_update',
      'status': 'completed',
      'tool_call_id': 'researcher:think:<UUID>',
    }),
  ])
# ---
# name: TestInlineModeSnapshots.test_text_stream[asyncio]
  list([
    dict({
      'content': list([
        dict({
          'content': dict({
            'text': 'Hello',
            'type': 'text',
          }),
          'type': 'content',
        }),
      ]),
      'kind': 'other',
      'session_update': 'tool_call',
      'status': 'pending',
      'title': '[`assistant`] Output',
      'tool_call_id': 'assistant:output:<UUID>',
    }),
    dict({
      'content': list([
        dict({
          'content': dict({
            'text': 'Hello world',
            'type': 'text',
          }),
          'type': 'content',
        }),
      ]),
      'session_update': 'tool_call_update',
      'status': 'in_progress',
      'tool_call_id': 'assistant:output:<UUID>',
    }),
    dict({
      'content': list([
        dict({
          'content': dict({
            'text': 'Hello world!',
            'type': 'text',
          }),
          'type': 'content',
        }),
      ]),
      'session_update': 'tool_call_update',
      'status': 'in_progress',
      'tool_call_id': 'assistant:output:<UUID>',
    }),
    dict({
      'session_update': 'tool_call_update',
      'status': 'completed',
      'tool_call_id': 'assistant:output:<UUID>',
    }),
  ])
# ---
# name: TestInlineModeSnapshots.test_thinking_stream[asyncio]
  list([
    dict({
      'kind': 'think',
      'session_update': 'tool_call',
      'status': 'pending',
      'title': '[`researcher`] Thinking',
      'tool_call_id': 'researcher:think:<UUID>',
    }),
    dict({
      'content': list([
        dict({
          'content': dict({
            'text': 'Analyzing',
            'type': 'text',
          }),
          'type': 'content',
        }),
      ]),
      'session_update': 'tool_call_update',
      'status': 'in_progress',
      'tool_call_id': 'researcher:think:<UUID>',
    }),
    dict({
      'content': list([
        dict({
          'content': dict({
            'text': 'Analyzing the',
            'type': 'text',
          }),
          'type': 'content',
        }),
      ]),
      'session_update': 'tool_call_update',
      'status': 'in_progress',
      'tool_call_id': 'researcher:think:<UUID>',
    }),
    dict({
      'content': list([
        dict({
          'content': dict({
            'text': 'Analyzing the problem',
            'type': 'text',
          }),
          'type': 'content',
        }),
      ]),
      'session_update': 'tool_call_update',
      'status': 'in_progress',
      'tool_call_id': 'researcher:think:<UUID>',
    }),
    dict({
      'session_update': 'tool_call_update',
      'status': 'completed',
      'tool_call_id': 'researcher:think:<UUID>',
    }),
  ])
# ---
# name: TestInlineModeSnapshots.test_tool_call[asyncio]
  list([
    dict({
      'content': list([
        dict({
          'content': dict({
            'text': "I'll search for files",
            'type': 'text',
          }),
          'type': 'content',
        }),
      ]),
      'kind': 'other',
      'session_update': 'tool_call',
      'status': 'pending',
      'title': '[`coder`] Output',
      'tool_call_id': 'coder:output:<UUID>',
    }),
    dict({
      'kind': 'search',
      'raw_input': dict({
        'pattern': '*.py',
      }),
      'session_update': 'tool_call',
      'status': 'pending',
      'title': '[`coder`]: Searching: *.py',
      'tool_call_id': 'coder:search:call_001',
    }),
    dict({
      'content': list([
        dict({
          'content': dict({
            'text': 'Found 3 files',
            'type': 'text',
          }),
          'type': 'content',
        }),
      ]),
      'raw_output': 'Found 3 files',
      'session_update': 'tool_call_update',
      'status': 'completed',
      'tool_call_id': 'coder:search:pyd_ai_<UUID>',
    }),
    dict({
      'session_update': 'tool_call_update',
      'status': 'completed',
      'tool_call_id': 'coder:output:<UUID>',
    }),
  ])
# ---
# name: TestInlineModeSnapshots.test_tool_call_error[asyncio]
  list([
    dict({
      'content': list([
        dict({
          'content': dict({
            'text': 'Executing command',
            'type': 'text',
          }),
          'type': 'content',
        }),
      ]),
      'kind': 'other',
      'session_update': 'tool_call',
      'status': 'pending',
      'title': '[`executor`] Output',
      'tool_call_id': 'executor:output:<UUID>',
    }),
    dict({
      'kind': 'execute',
      'raw_input': dict({
        'command': 'make build',
      }),
      'session_update': 'tool_call',
      'status': 'pending',
      'title': '[`executor`]: Running: make build',
      'tool_call_id': 'executor:bash:call_003',
    }),
    dict({
      'content': list([
        dict({
          'content': dict({
            'text': '''
              Error: Build failed: missing dependency
              
              Fix the errors and try again.
            ''',
            'type': 'text',
          }),
          'type': 'content',
        }),
      ]),
      'raw_output': '''
        Build failed: missing dependency
        
        Fix the errors and try again.
      ''',
      'session_update': 'tool_call_update',
      'status': 'failed',
      'tool_call_id': 'executor:bash:pyd_ai_<UUID>',
    }),
    dict({
      'session_update': 'tool_call_update',
      'status': 'completed',
      'tool_call_id': 'executor:output:<UUID>',
    }),
  ])
# ---
# name: TestLegacyModeSnapshots.test_text_stream[asyncio]
  list([
    dict({
      'content': dict({
        'text': '''
          
            🤖 **assistant**: 
        ''',
        'type': 'text',
      }),
      'message_id': '<UUID>',
      'session_update': 'agent_message_chunk',
    }),
    dict({
      'content': dict({
        'text': 'Hello',
        'type': 'text',
      }),
      'message_id': '<UUID>',
      'session_update': 'agent_message_chunk',
    }),
    dict({
      'content': dict({
        'text': ' world',
        'type': 'text',
      }),
      'message_id': '<UUID>',
      'session_update': 'agent_message_chunk',
    }),
    dict({
      'content': dict({
        'text': '!',
        'type': 'text',
      }),
      'message_id': '<UUID>',
      'session_update': 'agent_message_chunk',
    }),
    dict({
      'content': dict({
        'text': '''
          
            ---
  
        ''',
        'type': 'text',
      }),
      'message_id': '<UUID>',
      'session_update': 'agent_message_chunk',
    }),
  ])
# ---
# name: TestLegacyModeSnapshots.test_tool_call[asyncio]
  list([
    dict({
      'content': dict({
        'text': '''
          
            🤖 **coder**: 
        ''',
        'type': 'text',
      }),
      'message_id': '<UUID>',
      'session_update': 'agent_message_chunk',
    }),
    dict({
      'content': dict({
        'text': "I'll search for files",
        'type': 'text',
      }),
      'message_id': '<UUID>',
      'session_update': 'agent_message_chunk',
    }),
    dict({
      'content': dict({
        'text': '''
          
            - 🔧 [`coder`] Using tool: ``search``
  
        ''',
        'type': 'text',
      }),
      'message_id': '<UUID>',
      'session_update': 'agent_message_chunk',
    }),
    dict({
      'content': dict({
        'text': '''
            - ✅ [`coder`] `search`
  
        ''',
        'type': 'text',
      }),
      'message_id': '<UUID>',
      'session_update': 'agent_message_chunk',
    }),
    dict({
      'content': dict({
        'text': '''
          
            ---
  
        ''',
        'type': 'text',
      }),
      'message_id': '<UUID>',
      'session_update': 'agent_message_chunk',
    }),
  ])
# ---
# name: TestToolBoxModeSnapshots.test_long_text[asyncio]
  list([
    dict({
      'kind': 'other',
      'raw_input': dict({
      }),
      'session_update': 'tool_call',
      'status': 'pending',
      'title': '🤖 [`writer`]: agent start',
      'tool_call_id': '<UUID>',
    }),
    dict({
      'content': list([
        dict({
          'content': dict({
            'text': '''
              
              This is a long message that gets streamed in multi
            ''',
            'type': 'text',
          }),
          'type': 'content',
        }),
      ]),
      'kind': 'other',
      'session_update': 'tool_call_update',
      'status': 'in_progress',
      'title': '🤖 [`writer`]: Output...',
      'tool_call_id': '<UUID>',
    }),
  ])
# ---
# name: TestToolBoxModeSnapshots.test_mixed_events[asyncio]
  list([
    dict({
      'kind': 'other',
      'raw_input': dict({
      }),
      'session_update': 'tool_call',
      'status': 'pending',
      'title': '🤖 [`analyzer`]: agent start',
      'tool_call_id': '<UUID>',
    }),
    dict({
      'content': list([
        dict({
          'content': dict({
            'text': '''
              
              > **Thinking** :Need to analyze
            ''',
            'type': 'text',
          }),
          'type': 'content',
        }),
      ]),
      'kind': 'think',
      'session_update': 'tool_call_update',
      'status': 'in_progress',
      'title': '💭 [`analyzer`]: thinking...',
      'tool_call_id': '<UUID>',
    }),
    dict({
      'content': list([
        dict({
          'content': dict({
            'text': '''
              
              > **Thinking** :Need to analyze
              Let me check
            ''',
            'type': 'text',
          }),
          'type': 'content',
        }),
      ]),
      'kind': 'other',
      'session_update': 'tool_call_update',
      'status': 'in_progress',
      'title': '🤖 [`analyzer`]: Output...',
      'tool_call_id': '<UUID>',
    }),
    dict({
      'content': list([
        dict({
          'content': dict({
            'text': '''
              
              > **Thinking** :Need to analyze
              Let me check
              - calling `grep`
            ''',
            'type': 'text',
          }),
          'type': 'content',
        }),
      ]),
      'kind': 'other',
      'session_update': 'tool_call_update',
      'status': 'in_progress',
      'title': '🔧 [`analyzer`]: calling `grep`...',
      'tool_call_id': '<UUID>',
    }),
    dict({
      'content': list([
        dict({
          'content': dict({
            'text': '''
              
              > **Thinking** :Need to analyze
              Let me check
              - calling `grep`
              - `grep` completed
            ''',
            'type': 'text',
          }),
          'type': 'content',
        }),
      ]),
      'kind': 'other',
      'session_update': 'tool_call_update',
      'status': 'in_progress',
      'title': '✅ [`analyzer`]: `grep` completed',
      'tool_call_id': '<UUID>',
    }),
    dict({
      'content': list([
        dict({
          'content': dict({
            'text': '''
              
              > **Thinking** :Need to analyze
              Let me check
              - calling `grep`
              - `grep` completed - all good!
            ''',
            'type': 'text',
          }),
          'type': 'content',
        }),
      ]),
      'kind': 'other',
      'session_update': 'tool_call_update',
      'status': 'in_progress',
      'title': '🤖 [`analyzer`]: Output...',
      'tool_call_id': '<UUID>',
    }),
  ])
# ---
# name: TestToolBoxModeSnapshots.test_nested_subagents[asyncio]
  list([
    dict({
      'kind': 'other',
      'raw_input': dict({
      }),
      'session_update': 'tool_call',
      'status': 'pending',
      'title': '🤖 [`coordinator`]: agent start',
      'tool_call_id': '<UUID>',
    }),
    dict({
      'content': list([
        dict({
          'content': dict({
            'text': '''
              
              Delegating to researcher
            ''',
            'type': 'text',
          }),
          'type': 'content',
        }),
      ]),
      'kind': 'other',
      'session_update': 'tool_call_update',
      'status': 'in_progress',
      'title': '🤖 [`coordinator`]: Output...',
      'tool_call_id': '<UUID>',
    }),
    dict({
      'kind': 'other',
      'raw_input': dict({
      }),
      'session_update': 'tool_call',
      'status': 'pending',
      'title': '🤖 [`researcher`]: agent start',
      'tool_call_id': '<UUID>',
    }),
    dict({
      'content': list([
        dict({
          'content': dict({
            'text': '''
              
              > **Thinking** :Searching
            ''',
            'type': 'text',
          }),
          'type': 'content',
        }),
      ]),
      'kind': 'think',
      'session_update': 'tool_call_update',
      'status': 'in_progress',
      'title': '💭 [`researcher`]: thinking...',
      'tool_call_id': '<UUID>',
    }),
    dict({
      'content': list([
        dict({
          'content': dict({
            'text': '''
              
              > **Thinking** :Searching
              - calling `search`
            ''',
            'type': 'text',
          }),
          'type': 'content',
        }),
      ]),
      'kind': 'other',
      'session_update': 'tool_call_update',
      'status': 'in_progress',
      'title': '🔧 [`researcher`]: calling `search`...',
      'tool_call_id': '<UUID>',
    }),
    dict({
      'content': list([
        dict({
          'content': dict({
            'text': '''
              
              > **Thinking** :Searching
              - calling `search`
              - `search` completed
            ''',
            'type': 'text',
          }),
          'type': 'content',
        }),
      ]),
      'kind': 'other',
      'session_update': 'tool_call_update',
      'status': 'in_progress',
      'title': '✅ [`researcher`]: `search` completed',
      'tool_call_id': '<UUID>',
    }),
  ])
# ---
# name: TestToolBoxModeSnapshots.test_text_stream[asyncio]
  list([
    dict({
      'kind': 'other',
      'raw_input': dict({
      }),
      'session_update': 'tool_call',
      'status': 'pending',
      'title': '🤖 [`assistant`]: agent start',
      'tool_call_id': '<UUID>',
    }),
    dict({
      'content': list([
        dict({
          'content': dict({
            'text': '''
              
              Hello
            ''',
            'type': 'text',
          }),
          'type': 'content',
        }),
      ]),
      'kind': 'other',
      'session_update': 'tool_call_update',
      'status': 'in_progress',
      'title': '🤖 [`assistant`]: Output...',
      'tool_call_id': '<UUID>',
    }),
  ])
# ---
# name: TestToolBoxModeSnapshots.test_thinking_stream[asyncio]
  list([
    dict({
      'kind': 'other',
      'raw_input': dict({
      }),
      'session_update': 'tool_call',
      'status': 'pending',
      'title': '🤖 [`researcher`]: agent start',
      'tool_call_id': '<UUID>',
    }),
    dict({
      'content': list([
        dict({
          'content': dict({
            'text': '''
              
              > **Thinking** :Analyzing
            ''',
            'type': 'text',
          }),
          'type': 'content',
        }),
      ]),
      'kind': 'think',
      'session_update': 'tool_call_update',
      'status': 'in_progress',
      'title': '💭 [`researcher`]: thinking...',
      'tool_call_id': '<UUID>',
    }),
    dict({
      'content': list([
        dict({
          'content': dict({
            'text': '''
              
              > **Thinking** :Analyzing the
            ''',
            'type': 'text',
          }),
          'type': 'content',
        }),
      ]),
      'kind': 'think',
      'session_update': 'tool_call_update',
      'status': 'in_progress',
      'title': '💭 [`researcher`]: thinking...',
      'tool_call_id': '<UUID>',
    }),
    dict({
      'content': list([
        dict({
          'content': dict({
            'text': '''
              
              > **Thinking** :Analyzing the problem
            ''',
            'type': 'text',
          }),
          'type': 'content',
        }),
      ]),
      'kind': 'think',
      'session_update': 'tool_call_update',
      'status': 'in_progress',
      'title': '💭 [`researcher`]: thinking...',
      'tool_call_id': '<UUID>',
    }),
  ])
# ---
# name: TestToolBoxModeSnapshots.test_tool_call[asyncio]
  list([
    dict({
      'kind': 'other',
      'raw_input': dict({
      }),
      'session_update': 'tool_call',
      'status': 'pending',
      'title': '🤖 [`coder`]: agent start',
      'tool_call_id': '<UUID>',
    }),
    dict({
      'content': list([
        dict({
          'content': dict({
            'text': '''
              
              I'll search for files
            ''',
            'type': 'text',
          }),
          'type': 'content',
        }),
      ]),
      'kind': 'other',
      'session_update': 'tool_call_update',
      'status': 'in_progress',
      'title': '🤖 [`coder`]: Output...',
      'tool_call_id': '<UUID>',
    }),
    dict({
      'content': list([
        dict({
          'content': dict({
            'text': '''
              
              I'll search for files
              - calling `search`
            ''',
            'type': 'text',
          }),
          'type': 'content',
        }),
      ]),
      'kind': 'other',
      'session_update': 'tool_call_update',
      'status': 'in_progress',
      'title': '🔧 [`coder`]: calling `search`...',
      'tool_call_id': '<UUID>',
    }),
    dict({
      'content': list([
        dict({
          'content': dict({
            'text': '''
              
              I'll search for files
              - calling `search`
              - `search` completed
            ''',
            'type': 'text',
          }),
          'type': 'content',
        }),
      ]),
      'kind': 'other',
      'session_update': 'tool_call_update',
      'status': 'in_progress',
      'title': '✅ [`coder`]: `search` completed',
      'tool_call_id': '<UUID>',
    }),
  ])
# ---
# name: TestToolBoxModeSnapshots.test_tool_call_error[asyncio]
  list([
    dict({
      'kind': 'other',
      'raw_input': dict({
      }),
      'session_update': 'tool_call',
      'status': 'pending',
      'title': '🤖 [`executor`]: agent start',
      'tool_call_id': '<UUID>',
    }),
    dict({
      'content': list([
        dict({
          'content': dict({
            'text': '''
              
              Executing command
            ''',
            'type': 'text',
          }),
          'type': 'content',
        }),
      ]),
      'kind': 'other',
      'session_update': 'tool_call_update',
      'status': 'in_progress',
      'title': '🤖 [`executor`]: Output...',
      'tool_call_id': '<UUID>',
    }),
    dict({
      'content': list([
        dict({
          'content': dict({
            'text': '''
              
              Executing command
              - calling `bash`
            ''',
            'type': 'text',
          }),
          'type': 'content',
        }),
      ]),
      'kind': 'other',
      'session_update': 'tool_call_update',
      'status': 'in_progress',
      'title': '🔧 [`executor`]: calling `bash`...',
      'tool_call_id': '<UUID>',
    }),
    dict({
      'content': list([
        dict({
          'content': dict({
            'text': '''
              
              Executing command
              - calling `bash`
              - `bash` failed: `Build failed: missing dependency
              
              Fix the errors and try again.`
            ''',
            'type': 'text',
          }),
          'type': 'content',
        }),
      ]),
      'kind': 'other',
      'session_update': 'tool_call_update',
      'status': 'in_progress',
      'title': '❌ [`executor`]: `bash` failed',
      'tool_call_id': '<UUID>',
    }),
  ])
# ---
